WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77196
[Gtk] DumpRenderTree lacks --no-timeout command line option
https://bugs.webkit.org/show_bug.cgi?id=77196
Summary
[Gtk] DumpRenderTree lacks --no-timeout command line option
Zan Dobersek
Reported
2012-01-27 01:48:25 PST
run-perf-tests runs DumpRenderTree with the --no-timeout cmd flag, but currently the Gtk's DumpRenderTree does not make that option available, causing all the performance tests to fail.
Attachments
Patch
(4.14 KB, patch)
2012-01-27 01:53 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2012-01-27 01:53:39 PST
Created
attachment 124278
[details]
Patch Mimic the Mac port's way of handling the watchdog timer. This makes it possible to properly use --no-timeout command line option, required for running perf tests.
WebKit Review Bot
Comment 2
2012-01-27 09:54:28 PST
Comment on
attachment 124278
[details]
Patch Clearing flags on attachment: 124278 Committed
r106126
: <
http://trac.webkit.org/changeset/106126
>
WebKit Review Bot
Comment 3
2012-01-27 09:54:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug