[Gtk] DumpRenderTree lacks --no-timeout command line option https://bugs.webkit.org/show_bug.cgi?id=77196

Patch by Zan Dobersek <zandobersek@gmail.com> on 2012-01-27
Reviewed by Martin Robinson.

Add the --no-timeout command line option and reorganize
watchdog code to make running DumpRenderTree without
timeout possible.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(setWaitToDumpWatchdog):
(shouldSetWaitToDumpWatchdog):
(initializeGlobalsFromCommandLineOptions):
* DumpRenderTree/gtk/DumpRenderTreeGtk.h:
* DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
(waitToDumpWatchdogFired):
(LayoutTestController::setWaitToDump):

Canonical link: https://commits.webkit.org/94104@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106126 268f45cc-cd09-0410-ab3c-d52691b4dbfc